# sfutils-extvolumes

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
scripts/it/: smoke.sh
src/sfutils_extvolumes/: __init__.py  _snow.py  _toml_manifest.py  check_setup.py  extvolume.py  sfutils-setup.sql
src/snow_utils_extvolumes/: __init__.py  _snow.py  check_setup.py  extvolume.py  snow-utils-setup.sql
tests/: conftest.py  test_check_setup.py  test_cli_commands.py  test_masking.py  test_naming.py  test_sql_generators.py
