[project]
name = "sfutils-extvolumes"
version = "0.1.0"
description = "Snowflake external volumes manager - sfutils CLI package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.0",
    "python-dotenv>=1.2.1",
    "snowflake-cli>=3.16.0",
]

[project.scripts]
sfutils-extvolumes = "sfutils_extvolumes:cli"
check-setup = "sfutils_extvolumes.check_setup:check"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfutils_extvolumes"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
