[project]
name = "sfutils-extvolumes"
version = "0.2.2"
description = "Snowflake external volumes manager - sfutils CLI package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.0",
    "python-dotenv>=1.2.1",
    "snowflake-cli>=3.16.0",
]

[project.scripts]
sfutils-extvolumes = "sfutils_extvolumes:cli"
check-setup = "sfutils_extvolumes.check_setup:check"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfutils_extvolumes"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names)
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs & design issues)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "N",    # pep8-naming conventions
    "RUF",  # ruff-specific rules
    "PL",   # pylint
]
ignore = [
    "PLR0911",  # Too many return statements — unavoidable in multi-branch dispatch functions
    "PLR0912",  # Too many branches — unavoidable in complex CLI handlers
    "PLR0913",  # Too many arguments — unavoidable in Click command functions
    "PLR0915",  # Too many statements — unavoidable in complex CLI handlers
    "PLR2004",  # Magic value comparisons — intentional for masking constants
    "PLW0602",  # global without assignment — intentional module-level state pattern
    "PLW0603",  # global statement — intentional module-level state pattern
]
